# basic-robot

./: CMakeLists.txt  README.md  package.xml
basic_robot/: drive.py  navigator.py
src/: lidarpublisher.cpp
